--- a/css/style.css
+++ b/css/style.css
@@ -51,8 +51,9 @@
     position: relative;
     width: 100%;
     padding-top: 10px;
-    padding-bottom: 15px;
+    padding-bottom: 20px;
     text-align: center;
+    display: flex;
 }
 .navbar .highlight{
     color: #9bdeb5;
@@ -66,6 +67,7 @@
     padding: 20px 0 5px 0;
 }
 .navbar a{
+    width: 100%;
     font-size: .8em;
     color: #333333;
     text-decoration: none;
