--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,8 @@
     padding-bottom: 20px;
     text-align: center;
     display: flex;
+    width: 100%;
+    justify-content: center;
 }
 .navbar .highlight{
     color: #9bdeb5;
