--- a/css/style.css
+++ b/css/style.css
@@ -4,34 +4,23 @@
     padding: 0;
     font-family: "Lato", sans-serif;
 }
-.right{
-    animation: right forwards 1s;
-}
-@keyframes right{
-    from{left : 100%}
-    to{left: 0;}
-}
 .page-container{
     width: 100%;
     height: 100vh;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    position: relative;
     overflow: hidden;
+    display: flex;
 }
 .page{
-    transition: all .5s;
+    /* transition: all .5s; */
     position: absolute;
     height: 100%;
     width: 100%;
     left: 0;
-    right: 0;
-    display: none;
+    top: 0;
 }
 .page-active{
-    z-index: 3;
+    z-index: 3 !important;
     display: block;
 }
 #profile{
@@ -41,8 +30,8 @@
     background-color: red;
 }
 #scan{
+    z-index: -1;
     background-color: rgb(184, 113, 113);
-    display: none;
 }
 .navbar{
     z-index: 9999;
