--- a/css/style.css
+++ b/css/style.css
@@ -416,6 +416,21 @@ input[type="text"], input[type="email"], input[type="password"]{
 #location.page{
     background: white;
 }
+#location.page h1{
+    text-align: center;
+    margin-top: 30px;
+}
+#location.page #map{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    z-index: -1;
+}
+
 /* animation */
 .left_out{
     animation : left_out .4s linear forwards;
