--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,47 @@ input[type="text"], input[type="email"], input[type="password"]{
     display: none;
     height: 0px;
 }
+.sec-nav{
+    display: none;
+    flex-direction: column;
+    justify-content: space-around;
+    transition: all .4s ease-out;
+    position: absolute;
+    bottom: calc(-100vh / 4);
+    left:0;
+    right: 0;
+    width: 100%;
+    height: calc(100vh / 4);
+    background-color: white;
+    z-index: 9999999;
+    padding: 5vh 10vw;
+}
+.sec-nav.active{
+    display: flex;
+    bottom: 0%;
+}
+.sec-nav.active + .sec-nav-opacity{
+    transition: all .4s linear;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 99;
+}
+.sec-nav a{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    text-decoration: none;
+    text-align: center;
+}
+.sec-nav a > img{
+    margin-right: 20px;
+}
 /* Background Image */
 #intro.page{background-image: url(../image/bg/intro.png);}
 #onboard.page{background-image: url(../image/bg/onboard.png);}
